# navix

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  DEVELOPING.md  README.md  SECURITY.md  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
bootstrap/: install  install_tests.sh
docs/: ARCHITECTURE.md  CURRENT_BEHAVIOR.md  OPEN_SOURCE_RELEASE.md  PROJECT_CONVENTIONS.md  RELEASE_PROCESS.md
src/: alt_screen.rs  app_state.rs  config.rs  config_ui.rs  file_logic.rs  input_routing.rs  main.rs  navigation.rs  panel_layout.rs  runtime_helpers.rs  shell.rs  state.rs  terminal_keys.rs  terminal_runtime.rs  theme.rs  tui.rs
src/tests/: alt_screen_tests.rs  app_state_tests.rs  config_tests.rs  file_logic_tests.rs  input_routing_tests.rs  mod.rs  navigation_tests.rs  runtime_helpers_tests.rs  runtime_options_tests.rs  shell_tests.rs  terminal_keys_tests.rs  theme_tests.rs  tui_tests.rs
