[package]
name = "navix"
version = "0.3.1"
edition = "2024"
rust-version = "1.88"
description = "Keyboard-first Rust TUI for file navigation, preview overlays, and embedded shell workflows."
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/PeterBuchHansen/navix"
homepage = "https://github.com/PeterBuchHansen/navix"
keywords = ["tui", "terminal", "navigation", "shell", "rust"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1"
ansi-to-tui = "8"
base64 = "0.22"
crossterm = "0.29"
libc = "0.2"
portable-pty = "0.9.0"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
vt100 = "0.16"
